fixed issue on mobile where buttons would overlap on save guide form when keyboard was open

--- a/src/components/SaveGuideForm/SaveGuideForm.css
+++ b/src/components/SaveGuideForm/SaveGuideForm.css
@@ -7,7 +7,7 @@
   padding: 2em;
   min-width: 10em;
   max-width: 70%;
-  min-height: 10em;
+  min-height: 15em;
   max-height: 30em;
   background-image: linear-gradient(to bottom right, rgba(14,51,95,.9), rgba(4, 3, 44, 0.9));
   border-radius: 1em;
